--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,9 +1,9 @@
 CFLAGS = \
 	-I.. \
-	-g \
 	-D_GNU_SOURCE=1
 
-LDFLAGS = -pg
+#	-g \
+# LDFLAGS = -pg
 objects = $(patsubst %.c,%.o,$(wildcard ../monad/*.c))
 
 
