Preparation for TCP client.
echoLoopF renamed to echoloopF

Unstable: Separating eventloop and moand run

Refactor: separating loop and run

Refactor: separating loop and run

Refactor: separating loop and run

Refactor: separating loop and run

==7771== Syscall param epoll_ctl(event) points to uninitialised byte(s)
==7771==    at 0x4990D2E: epoll_ctl (syscall-template.S:120)
==7771==    by 0x1098A5: _arm (io.c:54)
==7771==    by 0x1099F0: monad_io_again (io.c:93)
==7771==    by 0x10A90A: acceptM (tcp.c:213)
==7771==    by 0x10A002: monad_execute (monad.c:36)
==7771==    by 0x10A395: monad_succeeded (monad.c:201)
==7771==    by 0x10A7DC: listenM (tcp.c:63)
==7771==    by 0x10A002: monad_execute (monad.c:36)
==7771==    by 0x10A075: monad_run (monad.c:49)
==7771==    by 0x10AB87: monad_tcp_runserver (tcp.c:284)
==7771==    by 0x109799: main (echo_server.c:90)
==7771==  Address 0x1ffefff86c is on thread 1's stack
==7771==  in frame #1, created by _arm (io.c:48)
==7771==  Uninitialised value was created by a stack allocation
==7771==    at 0x10A006: monad_run (monad.c:41)

valgrind error supressions

valgrind error supressions

nothing

nothing

nothing

Coding style

Cleanup

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,13 +1,15 @@
 CFLAGS = \
 	-I.. \
 	-g \
+	-fms-extensions \
 	-D_GNU_SOURCE=1
 
 # LDFLAGS = -pg
 objects = $(patsubst %.c,%.o,$(wildcard ../monad/*.c))
 
 
-all: echo_shell echo_server echo_miniserver
+# all: echo_shell echo_server echo_client
+all: echo_shell echo_server 
 
 
 echo_shell: echo_shell.c $(objects)
@@ -18,7 +20,7 @@ echo_server: echo_server.c $(objects)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 
-echo_miniserver: echo_miniserver.c $(objects)
+echo_client: echo_client.c $(objects)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 
@@ -26,7 +28,6 @@ echo_miniserver: echo_miniserver.c $(objects)
 clean:: 
 	- rm echo_shell 
 	- rm echo_server 
-	- rm echo_miniserver 
 	- rm massif.out.*
 	- rm gmon.out
 	cd ..; make clean
@@ -35,3 +36,15 @@ clean::
 .PHONY: debug-echo_shell
 debug-echo_shell: echo_shell
 	gdb ./$^
+
+
+.PHONY: valgrind
+valgrind: all
+	valgrind \
+		--tool=memcheck \
+		--leak-check=full \
+		--track-origins=yes \
+		--suppressions=.valgrind.supp \
+		--gen-suppressions=all \
+		./echo_server
+
