--- a/examples/Makefile
+++ b/examples/Makefile
@@ -10,8 +10,8 @@ LDFLAGS = `pkg-config --libs openssl`
 
 
 objects = $(patsubst %.c,%.o,$(wildcard $(SRC)/*.c))
-# execs = state echoshell echoserver echoclient tlsclient random
-execs = state echoserver echoclient tlsclient
+# execs = echoshell echoserver echoclient tlsclient random
+execs = echoserver echoclient tlsclient
 
 
 all: $(execs)
