--- a/examples/Makefile
+++ b/examples/Makefile
@@ -10,7 +10,7 @@ LDFLAGS = `pkg-config --libs openssl`
 
 
 objects = $(patsubst %.c,%.o,$(wildcard $(SRC)/*.c))
-execs = random echoshell echoserver echoclient tlsclient
+execs = random echoshell echoserver echoclient tlsclient tunclient
 
 
 all: $(execs)
@@ -31,6 +31,7 @@ clean::
 	- rm echoserver 
 	- rm echoclient
 	- rm tlsclient
+	- rm tunclient
 	- rm state 
 	- rm random 
 	- rm massif.out.*
