Adding void *ptr to fileS

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -15,9 +15,9 @@ execs = \
 	echoshell \
 	echoserver \
 	echoclient \
-	tlsclient \
-	tunclient \
-	tunserver
+	tlsclient
+	# tunclient \
+	# tunserver
 
 
 all: $(execs)
